paginas de recursos para css

--- a/CSS/Guia_Definitiva.css
+++ b/CSS/Guia_Definitiva.css
@@ -1,5 +1,11 @@
 /*  <link rel="stylesheet" href="Guia_Definitiva.css"> */
-
+/* https://cssbud.com/css-generator/css-glow-generator/ */
+/* https://9elements.github.io/fancy-border-radius/ */
+/* https://cssgrid-generator.netlify.app */
+/* https://ui.glass/generator/ */
+/* https://animista.net */
+/* https://ui-buttons.web.app */
+/* https://uiverse.io */
 h1{
 background-color: transparent;  /* El fondo del elemento es transparente. */
 background-color: #f4f4f4;      /* Fondo de color gris claro (hex: #f4f4f4). */
