empiezo la parte e flex

--- a/CSS/Midu/Midu.css
+++ b/CSS/Midu/Midu.css
@@ -82,4 +82,4 @@ pero con el inset: 0; es una abreviatura de top left bottom rigth*/
     right: 0;
 }
 /*--------------------------------------- 5 ---------------------------------------------*/
-/*-- Pruebas con las capas, ver el ejemplo en prueba.html y prueba.css */
+/*-- Pruebas con las capas, el z-index, ver el ejemplo en prueba.html y prueba.css */
